--- a/gradle.properties
+++ b/gradle.properties
@@ -16,4 +16,6 @@ org.gradle.jvmargs=-Xmx3g -XX:MaxPermSize=2048m -XX:+HeapDumpOnOutOfMemoryError 
 org.gradle.configureondemand=true
 org.gradle.parallel=true
 org.gradle.daemon=true
-android.enableBuildCache=false
+kapt.incremental.apt=true
+android.useAndroidX=true
+android.enableJetifier=true
