--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,14 +29,18 @@ android {
     dexOptions {
         preDexLibraries true
     }
-
+    compileOptions {
+        sourceCompatibility = "1.8"
+        targetCompatibility = "1.8"
+    }
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 
 }
 
 
 dependencies {
-
-    def dagger_version = '2.10'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
@@ -46,29 +50,31 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
-    implementation "com.google.dagger:dagger:$dagger_version"
-    implementation "com.google.dagger:dagger-android-support:$dagger_version"
-    kapt "com.google.dagger:dagger-compiler:$dagger_version"
-    kapt "com.google.dagger:dagger-android-processor:$dagger_version"
-    implementation 'org.greenrobot:greendao:3.2.2'
+    implementation 'android.arch.persistence.room:runtime:1.1.1'
 
-    implementation 'net.danlew:android.joda:2.9.9'
+    implementation 'org.koin:koin-android:2.0.1'
+    implementation 'org.koin:koin-android-scope:2.0.1'
+    implementation 'org.koin:koin-android-viewmodel:2.0.1'
+
+    implementation "androidx.work:work-runtime-ktx:$rootProject.work_version"
+
     implementation 'com.github.vivchar:RendererRecyclerViewAdapter:2.3.1'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.8'
     implementation 'com.twotoasters.SectionCursorAdapter:library:2.0.1'
     implementation 'se.emilsjolander:stickylistheaders:2.7.0'
     implementation 'com.github.hotchemi:permissionsdispatcher:3.1.0'
-    kapt 'com.github.hotchemi:permissionsdispatcher-processor:3.1.0'
 
+    kapt 'com.github.hotchemi:permissionsdispatcher-processor:3.1.0'
+    kapt 'android.arch.persistence.room:compiler:1.1.1'
+
+    annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     testImplementation "org.robolectric:robolectric:4.2.1"
 
-    implementation 'com.github.salomonbrys.kodein:kodein:4.1.0'
-    implementation 'com.github.salomonbrys.kodein:kodein-android:4.1.0'
 
 
 }
