--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,8 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 kapt{
-    generateStubs=false
+    generateStubs = false
+    correctErrorTypes = true
 }
 
 
